Changed to graphhopper
Permissions change

File permissions fix

Permissions fix

Version check

Remove change

Build file

Build updates

Java version change

Added build bash script

Use MMAP

Ammended dockeer

mount fixes

Df chekc

codebuild dir

test

Build fix

Changed to EFS usage

Set max distance

Memory increase

codepipeline import

Added GFTS

test

expose added

No gtfs test

import added

fix

test

fx

config fix

config fix

config fix

config fix

config fix

Config fix

jar fix

workdir changes

location fix

- jar fix

-jar fix

Http port change

Initial test